--- a/Layout1/src/styles.css
+++ b/Layout1/src/styles.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500&display=swap');
-body {
-    font-family: 'Fira Sans';
-    margin:0;
-    padding:0;
+
+:root {
+    font-size: 16px;
 }
 
-.image-text-section {
+body {
+    font-family: 'Fira Sans';
+    margin: 0;
+    padding: 0;
+}
+
+.main-section {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -15,106 +20,151 @@ body {
     background-color: #E3CFCF;
 }
 
-.image-text-section--visible {
+.main-section--visible {
     opacity: 1;
 }
 
-.image-text-section__item {
+.main-section__item {
     display: flex;
-    align-items: center; 
-    justify-content: center;  
+    align-items: center;
+    justify-content: center;
     width: 50%;
     text-align: center;
-    padding: 0; 
+    padding: 0;
     box-sizing: border-box;
 }
 
-.image-text-section__item-container {
-    padding:20px 90px;
+.main-section__item-container {
+    padding: 0 8.2rem;
 }
 
-.image-text-section__item-text {
+.main-section__item-text {
     margin: 0 auto;
 }
 
-.image-text-section__item-image {
+.main-section__item-image {
     max-width: 100%;
-    height: auto; 
+    height: auto;
 }
 
-.image-text-section__item-description1, .image-text-section__item-description2 {
+.main-section__item-description1,
+.main-section__item-description2 {
     font-weight: 300;
-    font-size: 18px;
+    font-size: 1rem;
     transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
     overflow: hidden;
     max-height: 0;
     opacity: 0;
 }
 
-.image-text-section__item-description1 {
+.main-section__item-description1 {
     display: block;
     max-height: unset;
     opacity: 1;
 }
 
-.image-text-section__item-heading {
-    font-size: 32px;
+.main-section__item-description2 {
+    margin-bottom: 0;
+}
+
+.main-section__item-heading {
+    font-size: 1.7rem;
     font-weight: 275;
     text-transform: uppercase;
 }
 
-.image-text-section__item-description2--visible {
-    max-height: 200px;
+.main-section__item-description2--visible {
+    max-height: 12.5rem; 
     opacity: 1;
-    margin:0;
+    margin-bottom: 1rem;
 }
 
-.image-text-section__item-btn-toggle {
+.main-section__item-btn-toggle {
     font-weight: 500;
+    font-size:.75rem;
     font-family: 'Fira Sans';
     background: transparent;
-    border-radius: 5px;
-    margin-top: 10px;
-    padding: 12px 34px;
+    margin-top: 0.625rem; 
+    padding: 0.9rem 2.5rem; 
     cursor: pointer;
     border: 1px solid;
     opacity: 1;
-    transition: opacity 0.3s ease-out, display 0s 0.3s; 
+    transition: opacity 0.3s ease-out, display 0s 0.3s;
 }
 
-.image-text-section__item-btn-toggle--hidden {
+.main-section__item-btn-toggle--hidden {
     opacity: 0;
 }
 
+@media (min-width: 1440.1px) {
+    .main-section__item-container {
+        padding: 0 15rem; 
+    }
+
+    .main-section__item-heading {
+        font-size: 2rem;
+    }
+
+    .main-section__item-description1,
+    .main-section__item-description2 {
+        font-size: 1.25rem;
+    }
+
+    .main-section__item-btn-toggle {
+        font-size: .85rem;
+        padding: 1.2rem 3rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .main-section__item-container {
+        padding: 4.375rem 3rem;
+    }
+
+    .main-section__item-heading {
+        font-size: 1.5rem;
+    }
+
+    .main-section__item-description1,
+    .main-section__item-description2 {
+        font-size: 1rem;
+    }
+
+    .main-section__item-btn-toggle {
+        font-size: .7rem;
+        padding: 1rem 1.5rem;
+    }
+}
+
 @media (max-width: 768px) {
-    .image-text-section {
+    .main-section {
         flex-direction: column;
-        align-items: center;  
+        align-items: center;
     }
 
-    .image-text-section__item {
+    .main-section__item {
         width: 100%;
     }
 
-    .image-text-section__item-container {
-        padding:70px 20px;
+    .main-section__item-container {
+        padding: 4.375rem 1.6rem;
     }
 
-    .image-text-section__item-image {
+    .main-section__item-image {
         width: 100%;
     }
 
-    .image-text-section__item-heading {
-        font-size: 6vw; 
+    .main-section__item-heading {
+        font-size: 1.5rem;
     }
 
-    .image-text-section__item-description1, 
-    .image-text-section__item-description2 {
-        font-size: 4vw; 
+    .main-section__item-description1,
+    .main-section__item-description2 {
+        font-size: 1rem;
     }
 
-    .image-text-section__item-btn-toggle {
-        font-size: 4vw; 
-        padding: 8px 16px;
+    .main-section__item-btn-toggle {
+        font-size: .7rem;
+        padding: 1rem 1.5rem;
     }
 }
