--- a/Layout2/src/styles.css
+++ b/Layout2/src/styles.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani&display=swap');
 
+html {
+    font-size: 16px;
+}
 
 body {
     font-family: Arial, sans-serif;
@@ -15,6 +18,7 @@ body {
 }
 
 .recipe-section__content {
+    margin-top: 3.125rem;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -22,55 +26,63 @@ body {
 
 .recipe-section__title {
     font-family: "Barlow Condensed", sans-serif;
-    font-size: 4.5em;
-    margin-bottom: 10px;
+    font-size: 3.2rem;
+    margin-bottom: 0.625rem;
 }
 
 .recipe-section__description {
     font-family: "Rajdhani", sans-serif;
-    font-size: 2em;
-    margin-bottom: 20px;
+    font-size: 1.5rem;
+    margin-bottom: 1.25rem; 
 }
 
 .recipe-section__link {
     font-family: "Barlow Condensed", sans-serif;
-    font-size:1.7em;
+    font-size: 1.3rem;
     display: inline-block;
-    padding: 10px 20px;
+    padding: 0.625rem 1.25rem;
     background-color: transparent;
     color: black;
-    position:relative;
-    text-decoration:none;
+    position: relative;
+    text-decoration: none;
 }
 
 .recipe-section__link::after {
     content: '';
     position: absolute;
     left: 50%;
-    bottom: 5px;
+    bottom: 0.3125rem; 
     transform: translateX(-50%);
-    width: 130px;
-    height: 1px;
+    width: 8.125rem; 
+    height: 0.0625rem; 
     background-color: black;
 }
 
 .recipe-section__main {
+    margin-top: 2.5rem; 
     display: flex;
     flex-direction: row;
     align-items: center;
+    max-width: 90%;
 }
 
 .recipe {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    margin-top: 20px;
+    margin-top: 1.25rem;
     position: relative;
     width: 80%;
 }
 
 .recipe__wrapper {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.recipe__content {
+    max-width: 70%;
     position: relative;
 }
 
@@ -78,16 +90,13 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 0.625rem;
     width: 100%;
-    margin-bottom: 20px;
-    position: relative;
 }
 
 .recipe__icon {
     width: 45%;
-    margin-bottom: 10px;
-    position: relative;
+    margin-bottom: 0.625rem; 
 }
 
 .recipe__icon img {
@@ -97,21 +106,26 @@ body {
 }
 
 .recipe__icon:nth-child(1) img {
-    transform: scaleX(-1) translate(30px, -5px);
+    transform: scaleX(-1) translate(3.75rem, -2.1875rem); 
 }
 
 .recipe__icon:nth-child(2) img {
-    transform: rotate(110deg) translate(25px, 5px);
+    transform: rotate(110deg) translate(-0.9375rem, -2.5rem); 
 }
 
 .recipe__icon:nth-child(3) img {
-    transform: translateX(-30px, 30px);
+    transform: translate(-3.75rem, 2.8125rem); 
+}
+
+.recipe__icon:nth-child(4) img {
+    transform: translate(2.1875rem, 2.1875rem);
 }
 
 .recipe__image {
-    position: absolute; 
-    width: 300px;
-    height: 300px;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     top: 50%;
     left: 50%;
@@ -127,17 +141,20 @@ body {
 
 .recipe__details {
     text-align: center;
+    margin-top: 1.25rem;
+    font-size: 1.3rem;
+    width: inherit;
 }
 
 .recipe__name {
-    font-family:'Barlow Condensed', sans-serif;
-    font-size: 1.5em;
-    margin-top: 10px;
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: 1.5rem;
+    margin-top: 0.625rem;
 }
 
 @media (max-width: 768px) {
     .recipe {
-      width:95%;
+        width: 95%;
     }
 
     .recipe-section__main {
@@ -146,18 +163,39 @@ body {
     }
 
     .recipe__details {
-        width:85%;
-        }
+        width: 95%;
+    }
 
-        .recipe-section__content {
-            font-size:.6em;
-        }
+    .recipe-section__title {
+        font-size:2.5rem;
+    }
 
-        .recipe-section__description {
-            font-size:2.5em;
-            padding:0 20px;
-        }
-        .recipe-section__link {
-            font-size:2.1em;
-        }
+    .recipe-section__content {
+        font-size: 0.6rem;
+    }
+
+    .recipe-section__description {
+        font-size: 1.4rem;
+        padding: 0 1.25rem; 
+    }
+
+    .recipe-section__link {
+        font-size: 1.3rem;
+    }
+
+    .recipe__icon:nth-child(1) img {
+        transform: scaleX(-1) translate(2.1875rem, -1.875rem); 
+    }
+
+    .recipe__icon:nth-child(2) img {
+        transform: rotate(110deg) translate(-0.9375rem, -1.25rem); 
+    }
+
+    .recipe__icon:nth-child(3) img {
+        transform: translate(-2.5rem, 2.1875rem); 
+    }
+
+    .recipe__icon:nth-child(4) img {
+        transform: translate(1.5625rem, 1.875rem);
+    }
 }
