--- a/Layout3/src/styles.css
+++ b/Layout3/src/styles.css
@@ -1,27 +1,34 @@
+:root {
+    font-size: 16px;
+}
+
 body, * {
-    background-color:#F3EDE5;
+    background-color: #F3EDE5;
+    margin: 0;
+    padding: 0;
 }
 
 .carousel-active {
-    overflow-x: hidden; /* Disable horizontal scrolling */
+    overflow-x: hidden;
 }
 
 .carousel-wrapper {
-height:100vh;
-display:flex;
-position:relative;
+    height: 100vh;
+    display: flex;
+    position: relative;
 }
 
 .carousel {
-    position:absolute;
+    position: relative;
     width: 100%;
-    height: 70vh;
-    align-self:center;
+    height: 60vh;
+    align-self: center;
+    padding-left: 2.188rem; 
 }
 
 .carousel__slide {
     text-align: center;
-    font-size: 18px;
+    font-size: 1.125rem; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,24 +37,20 @@ position:relative;
 .carousel__image {
     width: 100%;
     height: 100%;
-    object-fit:cover;
+    object-fit: cover;
 }
 
-/* Responsive styling */
-@media (max-width: 375px) {
-    .carousel__slide {
-        font-size: 14px;
-    }
+.carousel__button-next {
+    right: 7.813rem; 
 }
 
-@media (min-width: 1440px) {
-    .carousel__slide {
-        font-size: 24px;
-    }
+.carousel__button-prev {
+    left: 1.875rem;
 }
 
 .carousel__toggle-btn {
-    padding: 10px 20px;
+    margin: 1.25rem;
+    padding: 0.625rem 1.25rem; 
     background-color: grey;
     color: white;
     border: none;
@@ -60,30 +63,45 @@ position:relative;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    width: 40px;
-    height: 40px;
+    width: 1.875rem; 
+    height: 1.875rem; 
     border-radius: 50%;
-    background-color: white;
+    background-color: #222222;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 10; /* Ensure icons are on top */
+    z-index: 10;
 }
 
 .carousel__button-next img,
 .carousel__button-prev img {
-    width: 110%; /* Adjust icon size */
-    height: 110%; /* Adjust icon size */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: transparent;
 }
 .swiper-button-next::after, .swiper-button-prev::after {
     content: "";
 }
 
-.carousel__button-next {
-    right: 10px;
+@media (max-width: 375px) { 
+    .carousel {
+        height: 50vh;    
+    }
+
+    .carousel__slide {
+        font-size: 0.875rem;
+    }
+
+    .carousel__button-next,
+    .carousel__button-prev {
+        right: 2.5rem;
+    }
 }
 
-.carousel__button-prev {
-    left: 10px;
+@media (min-width: 1440px) { 
+    .carousel__slide {
+        font-size: 1.5rem; 
+    }
 }
